fix references css being too wide on mobile (#47)

--- a/src/app.css
+++ b/src/app.css
@@ -76,3 +76,7 @@
 .prose figure a {
 	@apply decoration-dsa-red1;
 }
+
+.references a {
+	@apply break-all
+}
